[package]
name = "kzg"
version = "0.1.0"
edition = "2021"

[dependencies]
# TODO: Use `std` feature once https://github.com/supranational/blst/pull/150 or similar upstreamed
blst = { git = 'https://github.com/subspace/blst.git', rev = "017edf9d7b943813b9ba2804a9eda20607b48139", default-features = false }
sha2 = "0.10.6"

[features]
default = [
    "rand",
    "std",
]
rand = []
std = [
    "blst/std",
    "sha2/std"
]
minimal-spec = []
