[package]
name = "zkcrypto"
version = "0.1.0"
edition = "2021"

[dependencies]
kzg = { path = "../kzg"}
kzg-bench = { path = "../kzg-bench" }
# TODO: Use `std` feature once https://github.com/supranational/blst/pull/150 or similar upstreamed
blst = { git = 'https://github.com/subspace/blst.git', rev = "017edf9d7b943813b9ba2804a9eda20607b48139" }
pairing = "0.22.0"
bls12_381 = "0.7.0"
num-bigint = "0.4"
rand = "0.8"
rand_core = "0.6"
subtle = "2.2.1"
rayon = "1.5.1"

[dependencies.ff]
version = "0.12"
default-features = false

[dev-dependencies]
criterion = "0.4.0"

[features]
parallel = []


[[bench]]
name = "zero_poly"
harness = false

[[bench]]
name = "poly"
harness = false

[[bench]]
name = "das"
harness = false

[[bench]]
name = "fft"
harness = false

[[bench]]
name = "kzg"
harness = false

[[bench]]
name = "fk20"
harness = false

[[bench]]
name = "recover"
harness = false
