[package]
name = "mcl_kzg_bench"
version = "0.1.0"
edition = "2021"

[dependencies]
mcl_rust = { path = '../kzg' }
blst = { git = 'https://github.com/subspace/blst.git', rev = "079887d2d05bb2d61df4ceef3d4c836228ebc6ff", default-features = false }
kzg = { path = "../../kzg" }
kzg-bench = { path = "../../kzg-bench" }

[dev-dependencies]
rand = "0.8.5"
criterion = "0.4.0"

[[bench]]
name = "shared_fk20"
harness = false

[[bench]]
name = "shared_zero_poly"
harness = false

[[bench]]
name = "shared_fft"
harness = false

[[bench]]
name = "shared_poly"
harness = false

[[bench]]
name = "shared_das"
harness = false

[[bench]]
name = "shared_recover"
harness = false

[[bench]]
name = "shared_kzg_proof"
harness = false

[[bench]]
name = "shared_eip_4844"
harness = false

#[[bench]]
#name = "bench_fft"
#harness = false

#[[bench]]
#name = "bench_proof_check"
#harness = false

#[[bench]]
#name = "bench_das"
#harness = false

#[[bench]]
#name = "bench_proof_gen"
#harness = false

#[[bench]]
#name = "bench_commits"
#harness = false

